# open-schedule-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  config.example.yaml  config.yaml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  social-posts.md
.github/workflows/: ci.yml  security.yml
docs/: deploy-railway.md  plan-managed-platform.md  setup-google.md
src/schedulebot/: __init__.py  __main__.py  cli.py  config.py  database.py  mcp_server.py  models.py  notifications.py  reminders.py  retry.py  timezone_resolver.py
src/schedulebot/calendar/: __init__.py  base.py  factory.py  google_auth.py  google_calendar.py  multi_calendar.py
src/schedulebot/channels/: base.py  discord.py  slack.py  telegram.py  web.py
src/schedulebot/core/: availability.py  engine.py
src/schedulebot/data/: config.example.yaml  env.example
src/schedulebot/llm/: __init__.py  anthropic.py  base.py  ollama.py  openai.py  prompts.py  tool_converter.py  tools.py  types.py
tests/: test_auto_detect.py  test_availability.py  test_cancel_link.py  test_conversation.py  test_e2e_booking.py  test_guest_flow.py  test_input_validation.py  test_multi_calendar.py  test_ollama.py  test_openai_tools.py  test_owner_tools.py  test_reminders.py  test_retry.py  test_simulation.py  test_timezone.py  test_tool_converter.py
